k8s/sonarr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.home.coredev.uk`) && (PathPrefix(`/api`) || Path(`/ping`) || Path(`/health`))
      kind: Rule
      services:
        - name: sonarr
          port: 8989
    - match: Host(`sonarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
          namespace: tinyauth
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-redirect
  namespace: sonarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: sonarr
          port: 8989
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: sonarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
